@@ -8,6 +8,11 @@ apt (0.9.7.6) UNRELEASED; urgency=low
   * apt-pkg/pkgcache.cc:
     - ignore negative dependencies applying in the same group for
       M-A:same packages on the real package name as self-conflicts
+  * cmdline/apt-cache.cc:
+    - print versioned dependency relations in (r)depends if the option
+      APT::Cache::ShowVersion is true (default: false) as discussed in
+      #218995 to help debian-cd fixing #687949. Thanks to Sam Lidder
+      for initial patch and Steve McIntyre for nagging and testing!
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 19 Sep 2012 11:29:56 +0200
 
